<resources>
    <string name="app_name">コンマネ！</string>
    <string name="view_title">コンマネ！</string>
    <string name="contact_R_setting">R 設定</string>
    <string name="contact_L_setting">L 設定</string>
    <string name="contact_LR_setting">期限設定</string>
    <string name="not_setting">未設定</string>
    <string name="set_time">%d月%d日にセット</string>
    <string name="limit_time">　月　日まで</string>
    <string name="limit">期限切れです</string>
    <string name="limit_month_days">あと%dヶ月%d日</string>
    <string name="limit_days">あと%d日</string>


    <!-- Tab -->
    <string name="tab1">基本画面</string>
    <string name="tab2">詳細画面</string>

    <!-- 詳細画面 -->
    <string name="push">通知設定</string>
    <string name="push1">通知</string>
    <string name="push_times">通知時間設定</string>
    <string name="push_on">通知ON</string>
    <string name="push_off">通知OFF</string>

    <string name="now_info">今使用中の情報</string>
    <string name="now_time1">何日まで？</string>
    <string name="now_time2">%d月%d日まで</string>
    <string name="now_time3">あと%d日</string>

    <string name="contact_info">コンタクトレンズ情報</string>
    <string name="contact_maker">メーカー</string>
    <string name="contact_type">タイプ</string>
    <string name="contact_day">デイ</string>
    <string name="contact_lens">度数</string>
    <string name="contact_other">その他・メモ</string>

    <string name="days_info">一括期間設定</string>
    <string-array name="days_nums">
        <item>2Week</item>
        <item>1Month</item>
        <item>手動入力</item>
    </string-array>

    <string name="box_info">在庫</string>
    <string name="box_enp">在庫切れ</string>
    <string name="box_hint">残り</string>
    <string name="box_hint_l">L 残り</string>
    <string name="box_hint_r">R 残り</string>
    <string name="box_num">%dセット</string>
    <string name="box_num2">L:%dセット\nR:%dセット</string>
    <string name="box_num3">L:在庫ぎれ\nR:%dセット</string>
    <string name="box_num4">L:%dセット\nR:在庫ぎれ</string>

    <string name="times">通知時刻</string>
    <string name="funs">通知</string>

    <string name="r_view">Rのみ</string>
    <string name="r_set">R期限設定</string>
    <string name="l_set">L期限設定</string>

    <string name="lr_toggle">LR切替</string>
    <string name="lr_both">LR両方</string>

    <string name="vibration">通知振動</string>


    <!-- 広告IDなど -->
    <integer name="ad_id_50">931743</integer>
    <integer name="ad_id_100">931744</integer>
    <integer name="ad_id_pop_tab">931745</integer>
    <integer name="ad_id_pop_setting">931746</integer>
    <!-- 広告Apk -->
    <string name="ad_apk_50">01de7a024841ede21601fcd977c2081bd820e23a</string>
    <string name="ad_apk_100">363bcceed5c8603523054869911ced39e2b8aebc</string>
    <string name="ad_apk_pop_tab">7ce7f2ee4f6d12726bf75a64dc2ec0673d088d6f</string>
    <string name="ad_apk_pop_setting">9d84e2a375e0a9c189de1bc2a420797e9cad5c01</string>
    
    <!-- URL -->
    <string name="privacy_policy">https://www.gensounosakura.work/posts/5501843</string>
    <string name="privacy">プライバシーポリシーへ</string>

    <!-- レビュー誘導 -->
    <string name="rate_dialog_title">レビューをお願いします！</string>
    <!-- 初期 -->
    <string name="rate_dialog_message">このアプリはどうですか？</string>
    <string name="rate_dialog_ok">使いやすい</string>
    <string name="rate_dialog_no">そうでもない</string>
    <!-- Store -->
    <string name="rate_dialog_store_message">よろしければレビューをお願いします！</string>
    <string name="rate_dialog_store_ok">OK！</string>
    <string name="rate_dialog_store_no">また今度</string>
    <!-- Mail -->
    <string name="rate_dialog_mail_message">改善点・意見を送りますか？</string>
    <string name="rate_dialog_mail_ok">はい</string>
    <string name="rate_dialog_mail_no">また今度</string>
</resources>
