<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/now_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:id="@+id/textView2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
        <TextView
                android:text="@string/now_time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                android:textSize="20sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginLeft="24dp"/>
        <TextView
                android:text="@string/now_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/moreLimitText" android:layout_weight="1"
                android:textSize="24sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="@+id/textView9" android:layout_marginLeft="16dp"/>
        <TextView
                android:text="@string/now_time3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/moreLimitTimeText"
                android:layout_weight="1"
                app:layout_constraintStart_toEndOf="@+id/moreLimitText" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:textSize="18sp" app:layout_constraintBottom_toBottomOf="@+id/moreLimitText"/>

        <View android:layout_width="0dp" android:layout_height="5sp" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/moreLimitText" android:layout_marginLeft="16dp"
              android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
              android:id="@+id/view" android:background="@color/skyBlue" android:alpha="0.5"/>
        <View android:layout_width="0dp" android:layout_height="5sp" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/otherText" android:layout_marginLeft="16dp"
              android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
              android:id="@+id/view2" android:background="@color/skyBlue" android:alpha="0.5"
              android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/contact_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view" android:textSize="24sp"/>
        <TextView
                android:text="@string/contact_maker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView13"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12" android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp" android:textSize="18sp"/>
        <TextView
                android:text="@string/not_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/makerText"
                app:layout_constraintTop_toTopOf="@+id/textView13"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/lensText"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/contact_lens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/makerText" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/contact_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lensText"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/not_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lensText" app:layout_constraintStart_toStartOf="@+id/typeText"
                app:layout_constraintTop_toTopOf="@+id/textView15"
                app:layout_constraintBottom_toBottomOf="@+id/textView15" android:textSize="18sp"/>
        <TextView
                android:text="@string/not_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/otherText"
                android:id="@+id/typeText"
                app:layout_constraintTop_toTopOf="@+id/textView16"
                app:layout_constraintBottom_toBottomOf="@+id/textView16" android:textSize="18sp"/>
        <TextView
                android:text="@string/contact_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView19"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/not_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/otherText" app:layout_constraintStart_toEndOf="@+id/textView19"
                android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="@+id/textView19"
                app:layout_constraintBottom_toBottomOf="@+id/textView19" android:textSize="18sp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>