<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/stockLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" android:hint="@string/box_hint">

                <EditText
                        android:id="@+id/stockIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp" android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <View android:layout_width="0dp" android:layout_height="5dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                  android:alpha="0.5" android:background="@color/skyBlue" android:id="@+id/view3"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintTop_toBottomOf="@+id/otherLayout" android:layout_marginTop="16dp"/>

            <View android:layout_width="0dp" android:layout_height="5dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                  android:alpha="0.5" android:background="@color/skyBlue" android:id="@+id/view4"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintTop_toBottomOf="@+id/stockLayout" android:layout_marginTop="16dp"/>
            <View android:layout_width="0dp" android:layout_height="5dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                  android:alpha="0.5" android:background="@color/skyBlue" android:id="@+id/view"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/contact_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="16dp"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/makerLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:hint="@string/contact_maker">

                <EditText
                        android:id="@+id/makerIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="24sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/lensL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/makerLayout" android:hint="@string/contact_lens">

                <EditText
                        android:id="@+id/lensIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="24sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/typeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lensL" app:layout_constraintHorizontal_bias="0.0"
                    android:hint="@string/contact_type">

                <EditText
                        android:id="@+id/typeIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="24sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/otherLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/typeLayout" app:layout_constraintHorizontal_bias="0.0"
                    android:hint="@string/contact_other">

                <EditText
                        android:id="@+id/otherIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="24sp"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:text="@string/days_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/view4" android:textSize="24sp"
                    android:layout_marginTop="16dp"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:id="@+id/spinner"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:layout_marginStart="24dp" android:layout_marginTop="8dp" android:spinnerMode="dialog"
                    android:entries="@array/days_nums"/>
            <TextView
                    android:text="@string/box_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:id="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:textSize="24sp"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>